change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "font-picker-vue",
+	"name": "font-picker-vue2",
 	"version": "1.0.3",
 	"description": "Font selector component for Google Fonts",
 	"keywords": [
